<resources>
    <string name="app_name">EY Footprint</string>
    <string name="title">安永EY</string>
    <string name="guide_title">导览</string>
    <string name="tv_change_pass">修改密码</string>
    <string name="confirm_success">认证成功</string>
    <string name="rationale_camera">此应用需要摄像头权限</string>
    <string name="rationale_location">此应用需要定位及相关权限</string>

    <string name="login">登录</string>
    <string name="sign">注册</string>
    <string name="tv_login_first">首次登录？</string>
    <string name="tv_login_forget">忘记密码？</string>
    <string name="tv_login_username">邮箱账号</string>
    <string name="tv_login_pass">请输入密码</string>
    <string name="tv_login_invite">邀请码（对方工号）</string>
    <string name="thanku">ThankU</string>nian
    <string name="tv_thank_send">我也要发</string>
    <string name="back">返回</string>
    <string name="nianduzhangdan">年度轨迹</string>
    <string name="calendar">活动日历</string>
    <string name="today">本日活动</string>
    <string name="mine">我报名的活动</string>
    <string name="detail">活动详情</string>
    <string name="start_time">开始时间：%1$s</string>
    <string name="end_time">结束时间：%1$s</string>
    <string name="time">%1$s - %2$s</string>
    <string name="tv_change_pass_mobile">请输入您绑定的手机号</string>
    <string name="tv_change_pass_sms">请输入短信验证码</string>
    <string name="tv_change_pass_sms_send">获取验证码</string>
    <string name="tv_change_pass1">请输入密码</string>
    <string name="tv_change_pass2">请再次输入密码</string>
    <string name="confirm">确定</string>
    <string name="tv_confirm">员工认证</string>
    <string name="confirm1">欢迎您的到来</string>
    <string name="confirm2">在成功路上安永一直陪伴您</string>
    <string name="confirm3">恭喜您认证成功</string>
    <string name="healthy_life">活力EY</string>
    <string name="step_today">今日步数</string>
    <string name="step_hint">达到8000步，可获得积分</string>
    <string name="come_on">继续努力</string>
    <string name="healthy_task_daily">每日健康任务</string>
    <string name="task1">眼保健操</string>
    <string name="task_time_not_reach">未在活动时间</string>
    <string name="task_time_reach">完成任务点我</string>
    <string name="task1_desc">保护视力，缓解眼疲劳</string>
    <string name="task1_time">活动时间：每日10点-18点</string>
    <string name="task2">颈椎操</string>
    <string name="task2_desc">预防颈椎病，年轻有活力</string>
    <string name="task2_time">活动时间：每日15点-20点</string>
    <string name="honour">荣·耀</string>
    <string name="credit_detail">积分明细</string>
    <string name="main1">今日坐标</string>
    <string name="main3">荣耀</string>
    <string name="main4">我的半径</string>
    <string name="main6">刷刷存在感</string>
    <string name="main7">不定期更新</string>
    <string name="main8">年度轨迹</string>
    <string name="qiandao">签到</string>
    <string name="message_center">消息中心</string>
    <string name="friend">好友</string>
    <string name="credit">积分</string>
    <string name="credit1">积分：%1$s</string>
    <string name="level">等级：%1$s</string>
    <string name="frined">好友：%1$s</string>
    <string name="credit_paiming">安永排名</string>
    <string name="credit_give">赠送</string>
    <string name="new_friend">新的好友</string>
    <string name="new_friend_info">工号/姓名/手机号</string>
    <string name="person_info">个人资料</string>
    <string name="setting">账号设置</string>
    <string name="user_number">工号（GPN）</string>
    <string name="user_number1">(%1$s)</string>
    <string name="user_position">职位</string>
    <string name="user_locate">部门</string>
    <string name="telephone">联系方式</string>
    <string name="email">邮 箱</string>
    <string name="recommend_number">推 荐 码</string>
    <string name="thank_send_hint">使用数据库中英文名用于搜索</string>
    <string name="thank_model">选择固定模板</string>
    <string name="send_theme">推荐模板选择：</string>
    <string name="send_to">发送对象：</string>
    <string name="image_upload">自定义图片：</string>
    <string name="send_content">发送内容：</string>
    <string name="preview">浏览</string>
    <string name="send">发送</string>
    <string name="search_list">搜索列表</string>
    <string name="cancel">取消</string>
    <string name="turn_on_flash">打开手电</string>
    <string name="at">在</string>
    <string name="family">这个大家庭</string>
    <string name="confirm_step1_title">我们都有自己的工号和英文名</string>
    <string name="next">下一步</string>
    <string name="english_name">英文名（同Skype Name）</string>
    <string name="hello">你好</string>
    <string name="confirm_step_2_1">下面需要给您账号绑定手机</string>
    <string name="confirm_step_2_2">请输入短信验证码</string>
    <string name="mobile">手机号</string>
    <string name="yanzhengma">验证码</string>
    <string name="yanzhengma_get">获取验证码</string>
    <string name="sign_success">签到成功</string>
    <string name="get_it">我知道了</string>
    <string name="over">超过了</string>
    <string name="over_2">%的同事哦!!</string>
    <string name="sign_1">累计打卡第</string>
    <string name="sign_2">天</string>
    <string name="auto">自动</string>
    <string name="camera">相机</string>
    <string name="percent">%1$s %</string>

    <string name="wa">哇</string>
    <string name="good">很棒</string>
    <string name="confirm_step_3_1">现在给自己的账号设置下密码吧</string>
    <string name="confirm_step_3_2">以后就可以用邮箱+密码的方式登录APP啦</string>
    <string name="confirm_step_email">请输入邮箱地址</string>
    <string name="confirm_pass">输入密码</string>
    <string name="comfirm_pass2">请再次输入密码</string>
    <string name="confirm_step_4_1">是否有热心的同事推荐你用EY Footprint呢？</string>
    <string name="confirm_step_4_2">输入他（她）的推荐码吧</string>
    <string name="invite_code">好友邀请码(选填)</string>
    <string name="step1_error">请将信息填写完整！</string>
    <string name="step1_pass">密码不一致！</string>
    <string name="step1_gpn">GPN不存在！</string>


    <string name="new_friend_info_title">新好友资料</string>
    <string name="friend_info_title">好友资料</string>
    <string name="new_friend_apply">请求添加好友</string>
    <string name="new_friend_apply_success">已添加</string>
    <string name="friend_rank">好友排名</string>
    <string name="give_credit">赠予积分</string>
    <string name="accept_friend">同意添加</string>
    <string name="refuse_friend">忽略添加</string>
    <string name="permition">此应用需要获取相机及相册权限</string>


    <string name="temp_choose">自定义</string>

    <string name="text_error">请将信息填写完整！</string>
    <string name="update_img">上传图片！</string>
    <string name="update_img_ing">图片正在上传中，请稍等...</string>
    <string name="check_sd">请检查SD卡是否可用</string>
    <string name="upload_fail">上传失败，请稍后再试</string>
    <string name="upload_success">上传成功!</string>
    <string name="save">保存</string>
    <string name="save_pic">保存图片</string>
    <string name="language_setting">语言设置</string>
    <string name="background_setting">首页背景设置</string>
    <string name="pic">图库</string>
    <string name="send_sussess">发送成功!</string>
    <string name="check">查看</string>
    <string name="give_success">赠送成功!</string>
    <string name="point">积分</string>
    <string name="join_success">参加成功！</string>
    <string name="friend_apply">添加好友</string>
    <string name="friend_apply2">通过好友</string>
    <string name="logout_error">您的账号已在别处登录，请重新登录！</string>
    <string name="exit_hint">确定要退出么?</string>
    <string name="logout">退出登录</string>
    <string name="give_point">赠送好友积分</string>
    <string name="point_hint">请输入想要赠送的积分</string>
    <string name="obtain">获得</string>
    <string name="lose">失去</string>
    <string name="point_success">已领取积分!</string>
    <string name="point_successfully">积分取得成功!</string>
    <string name="complete">完成任务点我</string>
    <string name="join">参与活动</string>
    <string name="point_detail">%1$s%2$s%3$s积分</string>
    <string name="choose_place">手动签到</string>
    <string name="location">选择城市</string>
    <string name="select_city">请选择城市</string>
    <string name="mobile_hint">请填写手机号</string>
    <string name="change_success">修改成功</string>
    <string name="right_pass_hint">请输入正确密码</string>
    <string name="right_pass_hint2">密码须为8位以上，数字+字母+特殊符号</string>
    <string name="operate_successfully">操作成功</string>
    <string name="jiaocheng">是否跳转视频链接</string>
    <string name="no_longer">不再提醒</string>
    <string name="map_alert">点击下方小手按钮完成签到，年终会有小惊喜给到认真打卡的你哦！</string>
    <!--<string name="point_hint">请输入想要赠送的积分</string>-->
    <string name="save_success">图片保存成功！</string>
    <string name="no_data">暂无数据</string>
    <string name="message_detail_title">标题：</string>
    <string name="message_detail_content">内容：</string>
    <string name="confirm_remark"><![CDATA[注： \n工号（GPN）,比如CN010******，可在gT&E→Tools → User Profile 中查询。 \n英文名，同Skype Name，无点、下划线、连接符等符号。]]></string>
    <string name="no_location">无法找到该位置</string>
    <string name="thank_you_letter">感谢信</string>
    <string name="inbox">我的收件箱</string>
    <string name="outbox">我的发件箱</string>
    <string name="my_point">我的积分：%1$s</string>
    <string name="my_rank">我的排名：%1$s</string>
    <string name="delete">删除</string>
    <string name="now_day">今</string>
    <string name="email_num">封 我收到的邮件</string>
    <string name="update">此APP有可用更新，请进行相关操作</string>
    <string name="dialog_title">用户信息授权协议（以下简称“本协议”）是安永与用户（以下简称“您”）就个人信息授权使用所订立的合约。本协议适用于EY Footprint安永足迹APP平台的所有相关服务。   \n\n在接受本协议之前，请您仔细阅读本协议的全部内容。如果您不同意本协议的任意内容，或者无法准确理解该条款的含义，请不要进行任何操作。如您通过网络页面点击确认，即表示您同意接受本协议。如您对本协议的同意的内容/授权有任何改变、撤回或撤销，请您及时联系我们。</string>
    <string name="dialog_chap1_detail">我们可能获取的用户信息类型包括：  \n1. 账户信息（如，EY Footprint安永足迹APP账号以及各大功能使用记录及在使用过程中提供的其他信息）；  \n2. 个人的联系方式（如，姓名、手机号码等）；  \n3. 文字信息：您在使用EY Footprint安永足迹APP过程主动发出的数据、信息、内容记录</string>
    <string name="dialog_chap2_detail">我们可能会就下列各种情况，获得您的用户信息：  \n1. 您在访问或使用本APP服务时提供的信息；  \n2. 您在与我们的沟通中自动获取的信息：无论您何时与我们沟通，我们接收并储存的信息</string>
    <string name="dialog_chap3">\n三、用户信息的使用\n</string>
    <string name="dialog_chap3_detail">我们可能会利用我们获取的用户信息：  \n1. 就您的要求向您提供咨询服务，或向您做出回应或与您沟通；  \n2. 根据您的反馈和使用率，经营、评估和完善我们的APP模块和内容（包括开发功能；判断我们的内容质量；）；  \n3. 防止各种违法或犯罪活动和其他法律责任；  \n4. 遵守法律规定和我们的政策规则；  \n5. 使用您上传的文章，用于和其他用户分享；  \n6. 用于密码修改及用户注册的验证码验证流程。</string>
    <string name="dialog_chap4">\n四、用户信息的共享、披露\n</string>
    <string name="dialog_chap4_detail">用户的信息是我们业务的重要组成部分，我们不会出售或以其他方式共享您的个人信息，但本协议中已列明的如下情况除外。  \n1、第三方服务提供者： 我们聘请了外部公司提供APP程序开发和后台建设、管理等服务，包括但不限于提供开发以及运营、维护、IT平台和/或技术服务、数据安全或备份服务、发送信函或电子邮件、分析数据、提供搜索结果和链接等用户服务。在该等情况下，我们可能会共享用户信息。
        \n2、征得您的同意： 除以上规定及本协议已列明的情况外，当您的信息有可能披露给第三方时，您将会得到通知，并且您将有机会选择不与第三方共享此信息。
        \n3、在下列情况下，我们可能还会披露您的相关信息：根据法律、法规或法律程序（如，法院法令或传召出庭令）的规定； 根据政府部门（如，行政机构、执法机构）的要求； 为了保护本网站、我们的用户或其他人的权利及其财产或安全，或当我们认为对防止实际损害或财务损失，或调查可疑或实际非法活动来说，披露乃属必要或适当时。这也包括为防止欺诈等违法活动和减少信用风险而与其他公司和组织交换信息。</string>
    <string name="dialog_chap5">\n五、如您就本协议中的授权同意有任何改变、撤回或撤销，请您及时告知我们。\n</string>
    <string name="dialog_chap6">\n六、在可适用法律允许的范围内，我们可能会不时更新本协议。我们将在本平台上醒目位置发布公告或其他合理的方式，告知您本协议的任何重大变更， 您有权就变更部分向我们提出任何疑问。\n</string>
    <string name="dialog_chap7">\n七、我们将采用适当的安全维护措施，保护信息免于非授权访问或滥用；此外，我们将采取适当的措施对您提交变更请求的信息进行及时更新或删除。\n</string>
    <string name="dialog_chap8">\n我已阅读并理解上述信息，且自愿表示认同，我同意由EY Footprint收集和处理我的信息。\n</string>
    <string name="dialog_chap1">\n一、用户信息获取范围\n</string>
    <string name="dialog_chap2">\n二、用户信息获取方式\n</string>
    <string name="dialog_name">用户信息授权协议</string>
    <string name="dialog_agree">我同意</string>
</resources>
