<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_size_8dp"
        android:text="@string/sign_success"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/margin_size_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_1"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_pop_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="55"
            android:textColor="@color/yellow"
            android:textSize="@dimen/font_size_20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_2"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/margin_size_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/over"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_pop_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="x%"
            android:textColor="@color/yellow"
            android:textSize="@dimen/font_size_20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/over_2"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_pop_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/map_yellow"
        android:paddingBottom="@dimen/margin_size_8dp"
        android:paddingLeft="@dimen/margin_size_30dp"
        android:paddingRight="@dimen/margin_size_30dp"
        android:paddingTop="@dimen/margin_size_8dp"
        android:text="@string/get_it"
        android:textColor="#010101" />

</LinearLayout>