<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <Button
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/camera"
        android:textColor="#333"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/img_lib"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/pic"
        android:textColor="#333"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#333"
        android:textSize="18sp"/>

</LinearLayout>