<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.activity.MessageDetailActivity">

    <RelativeLayout
        android:id="@+id/rl_confirm_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title">

        <TextView
            android:id="@+id/iv_comfirm_back"
            style="@style/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/back"
            android:drawablePadding="@dimen/margin_size_8dp"
            android:text="@string/back"
            android:textColor="@color/white" />

        <TextView
            style="@style/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_size_8dp"
            android:text="@string/message_detail_title"
            android:textColor="@color/yellow" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_size_8dp"
            android:textColor="@color/white" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_size_8dp"
            android:text="@string/message_detail_content"
            android:textColor="@color/yellow" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_size_8dp"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>