<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.wshoto.user.anyong.ui.activity.ConfirmActivity">

    <RelativeLayout
        android:id="@+id/rl_confirm_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title">

        <TextView
            android:id="@+id/iv_comfirm_back"
            style="@style/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/back"
            android:drawablePadding="@dimen/margin_size_8dp"
            android:text="@string/back"
            android:textColor="@color/white" />

        <TextView
            style="@style/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_center" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never" />

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="center"
        android:text="@string/no_data"
        android:textColor="@color/white"
        android:visibility="gone">

    </TextView>
</LinearLayout>
