<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.activity.SettingActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/iv_comfirm_back"
            style="@style/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/back"
            android:drawablePadding="@dimen/margin_size_8dp"
            android:text="@string/back"
            android:textColor="@color/white" />

        <TextView
            style="@style/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_setting" />

        <TextView
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_size_8dp"
            android:text="@string/save"
            android:textColor="@color/white" />

    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rg_language"
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:padding="8dp"
            android:text="@string/auto"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rb_chinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:padding="8dp"
            android:text="中文"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rb_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:padding="8dp"
            android:text="English"
            android:textColor="@color/white" />
    </RadioGroup>
</LinearLayout>